--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include_directories(include)
 
-add_executable(PolarVortex src/main.cpp src/memory/Memory.cpp src/memory/StackAllocator.cpp src/assets/AssetManager.cpp)
+add_executable(PolarVortex src/main.cpp src/memory/Memory.cpp src/memory/StackAllocator.cpp src/assets/AssetManager.cpp src/render/glad.c src/game/Window.cpp)
+
+if(WIN32)
+    target_link_libraries(PolarVortex opengl32 ${CMAKE_SOURCE_DIR}/lib/win64-vc2019/glfw3.lib)
+elseif(APPLE)
+    # TODO: Implement
+else()
+    target_link_libraries(PolarVortex GL)
+endif()
 
 file(COPY assets DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
